final bug squish

--- a/final/style.css
+++ b/final/style.css
@@ -9,10 +9,15 @@
 	margin-left: 15px;
 }
 
+#hot{
+	text-align: center;
+}
+
+
 #title{
 	background-image: url("https://s3-media3.fl.yelpcdn.com/bphoto/AFfSxxAc-ZtMZ2br2BjywQ/o.jpg");
 	background-size: cover;
-	height: 600px;
+	height: 650px;
 /*	background-color: blue;*/
 /*	text-align: center;*/
 	display: flex;
@@ -34,8 +39,23 @@
 	margin: auto;
 }
 
+#body2{
+	background-color: #FCECC9;
+}
+
+.modalimg{
+	height: 350px;
+	display: block;
+	margin: auto;
+}
+
+.modal-body{
+	text-align: center;
+}
+
 nav{
 	background-color: #F15946;
+	position: fixed;
 }
 
 a{
@@ -59,10 +79,28 @@ p{
 	font-family: 'Roboto', sans-serif;
 }
 
+#team{
+	display: block;
+	margin: auto;
+	height: 500px;
+	padding: 40px;
+}
+
+#text{
+	text-align: center;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	background-color: #FCECC9;
+}
+
 #bagelz{
 	display: flex;
+	font-family: 'Roboto', sans-serif;
 	justify-content: center;
 	color: white;
+
 }
 
 #hours{
